--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@google/generative-ai": "^0.24.1",
+    "canvas-confetti": "^1.9.4",
     "clsx": "2.1.0",
     "framer-motion": "10.16.4",
     "lucide-react": "0.292.0",
@@ -21,6 +22,7 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
