--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@prisma/client": "^5.22.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "prisma": "^5.22.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
