--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "2.12.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "2.2.1",
     "uuid": "9.0.1"
   },
