--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "2.1.0",
     "framer-motion": "10.16.4",
     "lucide-react": "0.292.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "2.12.0",
