--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,59 @@
-# Database
+# ===========================================
+# LARA Backend - Production Environment Variables
+# ===========================================
+
+# -------------------------------------------
+# DATABASE (Required)
+# -------------------------------------------
+# PostgreSQL connection string
+# Railway provides this automatically if you add a PostgreSQL service
 DATABASE_URL="postgresql://user:password@host:5432/database"
 
-# Redis
+# -------------------------------------------
+# REDIS (Required)
+# -------------------------------------------
+# Redis connection URL for caching and session management
+# Railway provides this automatically if you add a Redis service
 REDIS_URL="redis://default:password@host:port"
 
-# JWT Secret (generate a random string)
-JWT_SECRET="your-secret-key-here"
+# -------------------------------------------
+# AUTHENTICATION (Required)
+# -------------------------------------------
+# JWT Secret - MUST be a strong random string in production
+# Generate with: openssl rand -base64 32
+JWT_SECRET="your-secret-key-here-generate-a-strong-random-string"
 
-# Anthropic API Key
-ANTHROPIC_API_KEY="sk-ant-..."
+# -------------------------------------------
+# AI / ANTHROPIC (Required)
+# -------------------------------------------
+# Anthropic API Key for Claude AI
+# Get from: https://console.anthropic.com/
+ANTHROPIC_API_KEY="sk-ant-api03-..."
 
-# Frontend URL (for CORS)
+# Claude model to use (optional, defaults to claude-haiku-4-5-20251001)
+CLAUDE_MODEL="claude-haiku-4-5-20251001"
+
+# -------------------------------------------
+# CORS / FRONTEND (Required)
+# -------------------------------------------
+# Frontend URL(s) for CORS - comma-separated for multiple origins
+# Example: "https://your-app.netlify.app,https://your-custom-domain.com"
 FRONTEND_URL="https://your-frontend.netlify.app"
 
-# Server Port (Railway sets this automatically)
+# -------------------------------------------
+# FILE UPLOADS / CLOUDINARY (Required for file uploads)
+# -------------------------------------------
+# Cloudinary credentials for file/image uploads
+# Get from: https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME="your-cloud-name"
+CLOUDINARY_API_KEY="your-api-key"
+CLOUDINARY_API_SECRET="your-api-secret"
+
+# -------------------------------------------
+# SERVER CONFIGURATION
+# -------------------------------------------
+# Port - Railway sets this automatically, no need to set manually
 PORT=3001
 
-# Environment
+# Environment mode
 NODE_ENV="production"
